[package]
name = "shogun-xrp"
version = "0.1.0"
edition = "2024"

[dependencies]
xrpl_http_client = { version = "0.16.7" }
xrpl_binary_codec = { version = "0.16.7" }
xrpl_types = { version = "0.16.7" }
libsecp256k1 = { version = "0.7.0" }


dotenv = "0.15.0"
ripple-keypairs = { version = "0.1.0" }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry", "std", "fmt"] }

sha2 = { version = "0.10.2", default-features = false }
rand_hc = "0.3.1"
ripemd = "0.1.1"
ed25519-dalek = { version = "2.1.1", default-features = false, features = [
    "alloc",
    "zeroize",
] }
secp256k1 = { version = "0.30.0", default-features = false, features = [
    "alloc",
] }
bs58 = { version = "0.5.0", default-features = false, features = [
    "check",
    "alloc",
] }
indexmap = { version = "2.6.0", features = ["serde"] }
regex = { version = "1.5.4", default-features = false }
strum = { version = "0.26.3", default-features = false }
strum_macros = { version = "0.26.4", default-features = false }
crypto-bigint = { version = "0.5.1" }
rust_decimal = { version = "1.17.0", default-features = false, features = [
    "serde",
] }
chrono = { version = "0.4.19", default-features = false, features = [
    "alloc",
    "clock",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.68", default-features = false, features = [
    "alloc",
] }
serde_with = "3.2.0"
serde_repr = "0.1"
zeroize = "1.5.7"
hashbrown = { version = "0.15.0", features = ["serde"] }
fnv = { version = "1.0.7", default-features = false }
derive-new = { version = "0.7.0", default-features = false }
thiserror-no-std = "2.0.2"
embassy-sync = "0.6.0"

# networking
url = { version = "2.2.2", default-features = false }
embedded-io-async = { version = "0.6.1" }
futures = { version = "0.3.30" }
tokio = { version = "1.0", features = ["full"] }
embassy-time = { version = "0.3.2" }
embedded-websocket-embedded-io = { version = "0.1.0", default-features = false, features = [
    "embedded-io-async",
] }
reqwless = { version = "0.13.0" }
reqwest = { version = "0.12.7", features = ["json"] }
tokio-tungstenite = { version = "0.24.0", features = [
    "native-tls",
] }
embassy-futures = { version = "0.1.1" }
embedded-nal-async = { version = "0.8.0" }
actix-rt = { version = "2.10.0" }
async-std = { version = "1.13.0" }
futures-executor = { version = "0.3.30" }
futures-timer = { version = "3.0.3" }
smol = { version = "2.0.2" }
bigdecimal = { version = "0.4.5", features = ["serde-json"] }
clap = { version = "4.5.39", features = ["derive"] }
bip39 = { version = "2.1.0", features = [
    "rand_core",
    "zeroize",
] }